<!-- http://www.vogella.com/articles/AndroidListView/ -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/contract"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contract"
        android:textSize="25sp"
        android:clickable="true"
	    android:onClick="onClick"  />

    <TextView
        android:id="@+id/projects"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/projects" 
        android:textSize="25sp"
        android:clickable="true"
	    android:onClick="onClick"  />
    <TextView
        android:id="@+id/nityaseva"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nityaseva"
		android:textSize="25sp"
		android:clickable="true"
	    android:onClick="onClick"  />
    <TextView
        android:id="@+id/sevapuja"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sevapuja"
        android:textSize="25sp"
        android:clickable="true"
	    android:onClick="onClick"   />
    <TextView
        android:id="@+id/goseva"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/goseva"
        android:textSize="25sp"
        android:clickable="true"
	    android:onClick="onClick"   />
    <TextView
        android:id="@+id/service"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/service" 
        android:textSize="25sp"
        android:clickable="true"
	    android:onClick="onClick"  />
</LinearLayout>